fix: text overflow

--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,10 @@ p {
   font-size: 1.5rem;
   letter-spacing: 0.05rem;
   margin: 0.5rem;
+  overflow: hidden;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 1px;
+  word-wrap: break-word;
 }
 
 .overlay {
